--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -6683,13 +6683,13 @@
     "context": "section header",
     "string": "Company Information"
   },
-  "src_dot_siteSettings_dot_components_dot_SiteSettingsPage_dot_2966820735": {
-    "context": "company information description message",
-    "string": "This address will be used to generate invoices and calculate shipping rates. Email address you provide here will be used as a contact adress for your customers."
-  },
   "src_dot_siteSettings_dot_components_dot_SiteSettingsPage_dot_3799756739": {
     "context": "site settings information description message",
     "string": "These are general information about your store. They define what is the URL of your store and what is shown in browsers taskbar."
+  },
+  "src_dot_siteSettings_dot_components_dot_SiteSettingsPage_dot_49182366": {
+    "context": "company information description message",
+    "string": "This address will be used to generate invoices and calculate shipping rates. Email address you provide here will be used as a contact address for your customers."
   },
   "src_dot_somethingWentWrong": {
     "string": "Saleor ran into an unexpected problem"
