--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -1584,6 +1584,10 @@
     "context": "add shipping zone title",
     "string": "Add Shipping Zones"
   },
+  "src_dot_channels_dot_components_dot_ShippingZonesCard_dot_allSelectedMessage": {
+    "context": "all selected zones card message",
+    "string": "All available shipping zones have been selected"
+  },
   "src_dot_channels_dot_components_dot_ShippingZonesCard_dot_subtitle": {
     "context": "card subtitle",
     "string": "Select shipping zones that will be supplied via this channel. You can assign Shipping Zones to multiple channels."
