--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -2481,6 +2481,9 @@
   "src_dot_components_dot_Timeline_dot_3028189627": {
     "string": "Leave your note here..."
   },
+  "src_dot_components_dot_TooltipTableCellHeader_dot_noFilterSelected": {
+    "string": "Sorting by this column requires active filter: {filterName}"
+  },
   "src_dot_components_dot_UserChip_dot_21332146": {
     "context": "button",
     "string": "Log out"
