Fix types and update messages

--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -2181,6 +2181,22 @@
     "context": "filters error messages value required",
     "string": "Choose a value"
   },
+  "src_dot_components_dot_Form_dot_cancelButton": {
+    "context": "ExitFormPrompt cancel button",
+    "string": "leave without saving"
+  },
+  "src_dot_components_dot_Form_dot_confirmButton": {
+    "context": "ExitFormPrompt confirm button",
+    "string": "save & continue"
+  },
+  "src_dot_components_dot_Form_dot_description": {
+    "context": "ExitFormPrompt description",
+    "string": "You have unsaved changes on this view. What would you like to do with them?"
+  },
+  "src_dot_components_dot_Form_dot_title": {
+    "context": "ExitFormPrompt title",
+    "string": "Are you sure you want to leave?"
+  },
   "src_dot_components_dot_ImageUpload_dot_1731007575": {
     "context": "image upload",
     "string": "Drop here to upload"
@@ -5180,19 +5196,11 @@
   "src_dot_orders_dot_views_dot_OrderDetails_dot_4085755992": {
     "string": "Invoice email sent"
   },
-  "src_dot_orders_dot_views_dot_OrderDetails_dot_4207717971": {
-    "context": "snackbar title",
-    "string": "Could not generate invoice"
-  },
   "src_dot_orders_dot_views_dot_OrderDetails_dot_55607988": {
     "string": "Invoice is Generating"
   },
   "src_dot_orders_dot_views_dot_OrderDetails_dot_617145655": {
     "string": "Shipping method successfully updated"
-  },
-  "src_dot_orders_dot_views_dot_OrderDetails_dot_811176136": {
-    "context": "error message",
-    "string": "No invoice plugin installed"
   },
   "src_dot_orders_dot_views_dot_OrderDetails_dot_927945225": {
     "string": "Fulfillment successfully cancelled"
@@ -8152,6 +8160,18 @@
   "src_dot_webhooks_dot_components_dot_WebhookStatus_dot_webhookStatus": {
     "context": "section header",
     "string": "Webhook Status"
+  },
+  "src_dot_webhooks_dot_components_dot_WebhooksDetailsPage_dot_header": {
+    "context": "header",
+    "string": "Unnamed Webhook Details"
+  },
+  "src_dot_webhooks_dot_components_dot_WebhooksDetailsPage_dot_headerCreate": {
+    "context": "header",
+    "string": "Create Webhook"
+  },
+  "src_dot_webhooks_dot_components_dot_WebhooksDetailsPage_dot_headerNamed": {
+    "context": "header",
+    "string": "{webhookName} Details"
   },
   "src_dot_webhooks_dot_components_dot_WebhooksList_dot_1153324159": {
     "string": "No webhooks found"
