--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3582,14 +3582,6 @@
     "context": "section header",
     "string": "Sales channel"
   },
-  "src_dot_orders_dot_components_dot_OrderAddressEditDialog_dot_3278396777": {
-    "context": "dialog header",
-    "string": "Edit Shipping Address"
-  },
-  "src_dot_orders_dot_components_dot_OrderAddressEditDialog_dot_3982060155": {
-    "context": "dialog header",
-    "string": "Edit Billing Address"
-  },
   "src_dot_orders_dot_components_dot_OrderBulkCancelDialog_dot_1528036340": {
     "context": "dialog header",
     "string": "Cancel Orders"
@@ -3611,9 +3603,13 @@
     "context": "section header",
     "string": "Sales channel"
   },
-  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_billingAddressDescription": {
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_addressChangeDescription": {
     "context": "dialog content",
-    "string": "Add a new address:"
+    "string": "Select method you want to use to change address"
+  },
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_billingChangeTitle": {
+    "context": "dialog header",
+    "string": "Change customer billing address"
   },
   "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_billingSameAsShipping": {
     "context": "checkbox label",
@@ -3627,36 +3623,49 @@
     "context": "address type",
     "string": "Use one of customer addresses"
   },
-  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_customerBillingAddressDescription": {
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_customerChangeBillingDescription": {
     "context": "dialog content",
     "string": "Select one of customer addresses or add a new address:"
   },
-  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_customerShippingAddressDescription": {
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_customerChangeDescription": {
     "context": "dialog content",
     "string": "Which address would you like to use as shipping address for selected customer:"
+  },
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_customerChangeTitle": {
+    "context": "dialog header",
+    "string": "Change address for order"
   },
   "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_newAddress": {
     "context": "address type",
     "string": "Add new address"
   },
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_noAddressBillingDescription": {
+    "context": "dialog content",
+    "string": "Add a new address:"
+  },
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_noAddressDescription": {
+    "context": "dialog content",
+    "string": "This customer doesn't have any addresses in the address book. Provide address for order:"
+  },
   "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_noResultsFound": {
+    "context": "info when addresses search is unsuccessful",
     "string": "No results found"
   },
   "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_searchInfo": {
     "context": "modal information under title",
     "string": "Select an address you want to use from the list below"
   },
-  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_shippingAddressDescription": {
-    "context": "dialog content",
-    "string": "This customer doesn’t have any shipping addresses. Provide address for order:"
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_shippingChangeTitle": {
+    "context": "dialog header",
+    "string": "Change customer shipping address"
+  },
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_shippingSameAsBilling": {
+    "context": "checkbox label",
+    "string": "Set the same for shipping address"
   },
   "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_shippingTitle": {
     "context": "search modal shipping title",
     "string": "Shipping address"
-  },
-  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_title": {
-    "context": "dialog header",
-    "string": "Change address for order"
   },
   "src_dot_orders_dot_components_dot_OrderCustomerChangeDialog_dot_changeAddress": {
     "context": "option label",
