--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -2028,6 +2028,10 @@
     "context": "product status title",
     "string": "{channelCount} {channelCount,plural, =1 {Channel} other {Channels}}"
   },
+  "src_dot_components_dot_ChannelsAvailabilityDropdown_dot_noChannels": {
+    "context": "dropdown label when there are no channels assigned",
+    "string": "No channels"
+  },
   "src_dot_components_dot_ChannelsAvailabilityDropdown_dot_published": {
     "context": "Status label when object is published in a channel",
     "string": "Published"
@@ -5294,7 +5298,7 @@
   },
   "src_dot_plugins_dot_components_dot_PluginsList_dot_channelTitle": {
     "context": "plugin channel availability status title",
-    "string": "{activeChannelsCount,plural, =0 {Inactive} other {Active in {activeChannelsCount}}}"
+    "string": "{activeChannelsCount,plural, =0 {Deactivated} other {Active in {activeChannelsCount}}}"
   },
   "src_dot_plugins_dot_components_dot_PluginsList_dot_confLabel": {
     "context": "table header configuration col label",
@@ -5311,10 +5315,6 @@
   "src_dot_plugins_dot_components_dot_PluginsList_dot_globalLabel": {
     "context": "PluginChannelConfigurationCell global title",
     "string": "Global"
-  },
-  "src_dot_plugins_dot_components_dot_PluginsList_dot_inactive": {
-    "context": "status label inactive",
-    "string": "Inactive"
   },
   "src_dot_plugins_dot_components_dot_PluginsList_dot_nameLabel": {
     "context": "table header name col label",
